nexus-os-main/nexus-os-main/nexus-oss/templates/deployment-nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus  # Avoid default namespace
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:  # POD-level security context
        runAsNonRoot: true
        fsGroup: 1000
      automountServiceAccountToken: false  # Disable unnecessary service account token mount
      containers:
        - name: nexus
          image: sonatype/nexus3:3.71.0   # Use a fixed version tag
          imagePullPolicy: Always         # Always pull the latest image
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data
              mountPath: "/mnt/data/nexus"
          readinessProbe:  # Readiness probe
            httpGet:
              path: /service/metrics
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:  # Liveness probe
            httpGet:
              path: /service/metrics
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
          resources:  # CPU and memory requests/limits
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          securityContext:  # Container-level security context
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-pvc
