nexus-os-main/nexus-os-main/nexus-oss/templates/service-nexus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus     # Specify the namespace here
spec:
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
