nexus-os-main/nexus-os-main/nexus-oss/templates/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: nexus     # Use a non-default namespace
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
