nexus-os-main/nexus-os-main/nexus-oss/templates/networkpostgres-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-network-policy
  namespace: nexus
spec:
  podSelector:
    matchLabels:
      app: postgresql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}  # Allow all pods in namespace (you can restrict further)
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
        - podSelector: {}  # Allow outgoing traffic to all pods
      ports:
        - protocol: TCP
          port: 5432
